--- a/baselines/model_elasticsearch_tfidf_bm25.ipynb
+++ b/baselines/model_elasticsearch_tfidf_bm25.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +96,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>meta_description</th>\n",
+       "      <th>meta_keywords</th>\n",
+       "      <th>page_id</th>\n",
+       "      <th>page_title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>when comes pioneers progressive rock handful b...</td>\n",
+       "      <td>faces anderson album chris jon went record tre...</td>\n",
+       "      <td>yes among year rock roll hall fame inductees c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4125505</td>\n",
+       "      <td>rock roll hall famers jon anderson trevor rabi...</td>\n",
+       "      <td>because good photos the best yes album coverss...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           full_text  \\\n",
+       "0  when comes pioneers progressive rock handful b...   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  faces anderson album chris jon went record tre...   \n",
+       "\n",
+       "                                    meta_description meta_keywords  page_id  \\\n",
+       "0  yes among year rock roll hall fame inductees c...           NaN  4125505   \n",
+       "\n",
+       "                                          page_title  \\\n",
+       "0  rock roll hall famers jon anderson trevor rabi...   \n",
+       "\n",
+       "                                             summary tags  \n",
+       "0  because good photos the best yes album coverss...  NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "articles.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +185,7 @@
     "    for i,row in (articles.iterrows()):\n",
     "\n",
     "        articl_key = row['page_id']\n",
-    "        query = row['page_title']\n",
+    "        query = row['page_title']+\" \"+row['meta_description']\n",
     "\n",
     "        result = search_indexing(query,tableField)\n",
     "\n",
@@ -135,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +242,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc@1\n",
+      "0.2485\n",
+      "Acc@5\n",
+      "0.3635\n",
+      "Acc@10\n",
+      "0.4162\n",
+      "Acc@20\n",
+      "0.4493\n",
+      "Acc@100\n",
+      "0.54\n"
+     ]
+    }
+   ],
    "source": [
     "for k in topK:\n",
     "    \n",
