--- a/data_analysis/table_analysis.ipynb
+++ b/data_analysis/table_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,32 +459,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#new tables analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables = pd.read_csv('../dataset/distinct_tables_allsignals.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>table_body</th>\n",
+       "      <th>table_caption</th>\n",
+       "      <th>table_header</th>\n",
+       "      <th>table_id</th>\n",
+       "      <th>table_page_full_text</th>\n",
+       "      <th>table_page_keywords</th>\n",
+       "      <th>table_page_meta_description</th>\n",
+       "      <th>table_page_summary</th>\n",
+       "      <th>table_page_title</th>\n",
+       "      <th>table_section_title</th>\n",
+       "      <th>table_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>the planet earth forms accretion disc revolvin...</td>\n",
+       "      <td>hadean eon</td>\n",
+       "      <td>date event</td>\n",
+       "      <td>10029</td>\n",
+       "      <td>current scientific theory outlining major even...</td>\n",
+       "      <td>history life earth ago timeline million eon ed...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>current scientific theory outlining major even...</td>\n",
+       "      <td>timeline evolutionary history life</td>\n",
+       "      <td>hadean eon</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          table_body table_caption  \\\n",
+       "0  the planet earth forms accretion disc revolvin...    hadean eon   \n",
+       "\n",
+       "  table_header  table_id                               table_page_full_text  \\\n",
+       "0   date event     10029  current scientific theory outlining major even...   \n",
+       "\n",
+       "                                 table_page_keywords  \\\n",
+       "0  history life earth ago timeline million eon ed...   \n",
+       "\n",
+       "   table_page_meta_description  \\\n",
+       "0                          NaN   \n",
+       "\n",
+       "                                  table_page_summary  \\\n",
+       "0  current scientific theory outlining major even...   \n",
+       "\n",
+       "                     table_page_title table_section_title  \\\n",
+       "0  timeline evolutionary history life          hadean eon   \n",
+       "\n",
+       "                                           table_url  \n",
+       "0  https://en.wikipedia.org/wiki/Timeline_of_the_...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [00:00<00:00, 1467704.31it/s]\n"
+      "85995it [00:24, 3440.37it/s]\n"
      ]
     }
    ],
    "source": [
-    "title_char_lenght = []\n",
+    "title_lenght = []\n",
+    "meta_description_lenght = []\n",
     "\n",
-    "for tables in tqdm(data_tables):\n",
+    "tknzr = TweetTokenizer()\n",
+    "\n",
+    "for i,row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    title = str(tables[1])\n",
+    "    title = str(row['table_page_title'])\n",
+    "    meta_description = str(row['table_page_summary'])\n",
+    "\n",
     "    \n",
-    "    lenght_char_title = len(title)\n",
+    "    lenght_title = len(tknzr.tokenize(title))\n",
+    "    lenght_meta_description = len(tknzr.tokenize(meta_description))\n",
     "    \n",
-    "    title_char_lenght.append(lenght_char_title)"
+    "    \n",
+    "    title_lenght.append(lenght_title)\n",
+    "    meta_description_lenght.append(lenght_meta_description)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -492,27 +608,45 @@
      "output_type": "stream",
      "text": [
       "title analysis:\n",
-      "max char = 123\n",
-      "min char = 1\n",
-      "avg char = 24.691170810561157\n",
-      "std char = 12.72121093967286\n"
+      "max words = 13\n",
+      "min words = 1\n",
+      "avg words = 2.9389848246991104\n",
+      "std words = 1.3568433719434725\n"
      ]
     }
    ],
    "source": [
     "print('title analysis:')\n",
-    "print(\"max char = \"+str(np.max(title_char_lenght)))\n",
-    "print(\"min char = \"+str(np.min(title_char_lenght)))\n",
-    "print(\"avg char = \"+str(np.mean(title_char_lenght)))\n",
-    "print(\"std char = \"+str(np.std(title_char_lenght)))"
+    "print(\"max words = \"+str(np.max(title_lenght)))\n",
+    "print(\"min words = \"+str(np.min(title_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(title_lenght)))\n",
+    "print(\"std words = \"+str(np.std(title_lenght)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meta description analysis:\n",
+      "max words = 674\n",
+      "min words = 1\n",
+      "avg words = 78.49880807023663\n",
+      "std words = 40.76460323189237\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('meta description analysis:')\n",
+    "print(\"max words = \"+str(np.max(meta_description_lenght)))\n",
+    "print(\"min words = \"+str(np.min(meta_description_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(meta_description_lenght)))\n",
+    "print(\"std words = \"+str(np.std(meta_description_lenght)))"
+   ]
   }
  ],
  "metadata": {
