--- a/model_title_main_passage/table_retrieval_title_main_passage.ipynb
+++ b/model_title_main_passage/table_retrieval_title_main_passage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,58 +23,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.0.0-rc0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',')"
+    "test_articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_model = gs.models.FastText.load('train_embedding_models/fasttext_embedding_50d')"
+    "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -83,7 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"tablePgID\"\n",
+    "# \"tablePgTitle\"\n",
+    "# \"tablePgFullText\"\n",
+    "# \"tablePgMetaDescription\"\n",
+    "# \"tablePgSummary\"\n",
+    "# \"tablePgKeywords\"\n",
+    "# \"tableSectionTitle\"\n",
+    "# \"tableCaption\"\n",
+    "# \"tableHeader\"\n",
+    "# \"tableBody\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +95,14 @@
     "    result= indexing_distinct_tables.search(\n",
     "        index=\"distinct_tables\", \n",
     "        body = {\n",
-    "        \"_source\": [\"tablePgID\",\"tablePgTitle\"],\n",
+    "        \"_source\": [\"tablePgID\",\"tablePgTitle\",\"tablePgSummary\"],\n",
     "        \"from\" : 0,\n",
     "        \"size\" : 100,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [\"tablePgTitle\"] \n",
+    "              \"fields\": [\"tablePgFullText\"] \n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,84 +132,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 40\n",
+    "MAX_PAD_TITLE = 55\n",
     "\n",
-    "def sequence_padding(X_DIM, value):\n",
+    "def sequence_padding_title(X_DIM, value):\n",
     "    \n",
-    "    value_padding = np.pad(value, ((0,MAX_PAD - X_DIM),(0,0)), 'constant')\n",
+    "    value_padding = np.pad(value, ((0,MAX_PAD_TITLE - X_DIM),(0,0)), 'constant')\n",
     "    \n",
     "    return value_padding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embedding(value):\n",
+    "def create_embedding_title(value):\n",
     "\n",
     "    value = tknzr.tokenize(str(value))\n",
     "    \n",
-    "    if len(value) < MAX_PAD:\n",
+    "    if len(value) < MAX_PAD_TITLE:\n",
     "        \n",
     "        embedding = embedding_model.wv[value]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
-    "        padding_embedding = sequence_padding(embedding.shape[0],embedding)\n",
+    "        padding_embedding = sequence_padding_title(embedding.shape[0],embedding)\n",
     "        \n",
     "        return padding_embedding\n",
     "        \n",
     "    else:\n",
     "        \n",
-    "        embedding = embedding_model.wv[value[0:MAX_PAD]]\n",
+    "        embedding = embedding_model.wv[value[0:MAX_PAD_TITLE]]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_index(article_title):\n",
-    "    \n",
-    "    tables_index = []\n",
+    "MAX_PAD_MAIN_PASSAGE = 55\n",
     "\n",
-    "    result_index = search_indexing(article_title)\n",
-    "        \n",
-    "    for hit in result_index['hits']['hits']:\n",
+    "def sequence_padding_main_passage(X_DIM, value):\n",
     "    \n",
-    "        table_ID = hit['_source']['tablePgID']\n",
-    "        \n",
-    "        table_page_title = hit['_source']['tablePgTitle']\n",
+    "    value_padding = np.pad(value, ((0,MAX_PAD_MAIN_PASSAGE - X_DIM),(0,0)), 'constant')\n",
     "    \n",
-    "        tables_index.append([table_ID,table_page_title])\n",
-    "    \n",
-    "    return tables_index"
+    "    return value_padding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('GRU_affinity_model_070_1M_meta_description.h5')"
+    "def create_embedding_main_passage(value):\n",
+    "\n",
+    "    value = tknzr.tokenize(str(value))\n",
+    "    \n",
+    "    if len(value) < MAX_PAD_MAIN_PASSAGE:\n",
+    "        \n",
+    "        embedding = embedding_model.wv[value]\n",
+    "        embedding = embedding.astype('float16')\n",
+    "        \n",
+    "        padding_embedding = sequence_padding_main_passage(embedding.shape[0],embedding)\n",
+    "        \n",
+    "        return padding_embedding\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        embedding = embedding_model.wv[value[0:MAX_PAD_MAIN_PASSAGE]]\n",
+    "        embedding = embedding.astype('float16')\n",
+    "        \n",
+    "        return embedding"
    ]
   },
   {
@@ -218,7 +230,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_index(query):\n",
+    "    \n",
+    "    tables_index = []\n",
+    "\n",
+    "    result_index = search_indexing(query)\n",
+    "        \n",
+    "    for hit in result_index['hits']['hits']:\n",
+    "    \n",
+    "        table_ID = hit['_source']['tablePgID']\n",
+    "        \n",
+    "        table_page_title = hit['_source']['tablePgTitle']\n",
+    "        \n",
+    "        table_page_main_passage = hit['_source']['tablePgSummary']\n",
+    "    \n",
+    "        tables_index.append([table_ID,table_page_title,table_page_main_passage])\n",
+    "    \n",
+    "    return tables_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranking_model = tf.keras.models.load_model('affinity_model_title_main_passage_05_0.9960.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_articles.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,43 +287,54 @@
     "    for i, row in tqdm(test_articles.iterrows()):\n",
     "        \n",
     "        article_ID = row['page_id']\n",
-    "        article_title_text = row['meta_description']\n",
-    "       \n",
+    "        article_title_text = row['page_title']\n",
+    "        article_main_passage_text = row['meta_description']\n",
+    "        \n",
+    "        query = row['page_title']+\" \"+row['meta_description']+\" \"+row['keywords']\n",
+    "        \n",
     "        article_title = []\n",
-    "        title_table = []\n",
+    "        article_main_passage = []\n",
+    "        table_title = []\n",
+    "        table_main_passage = []\n",
     "        ranked_tables_model = []\n",
     "\n",
-    "        ranked_tables_index = search_index(article_title_text)\n",
+    "        ranked_tables_index = search_index(query)\n",
     "        \n",
     "        if len(ranked_tables_index) > 0:\n",
-    "        \n",
-    "            article_title_embedding = create_embedding(article_title_text)\n",
-    "\n",
-    "            for table_ID, table_title in (ranked_tables_index):\n",
-    "\n",
-    "                table_title_embedding = create_embedding(str(table_title))\n",
+    "            \n",
+    "            article_title_embedding = create_embedding_title(article_title_text)\n",
+    "            article_main_passage_embedding = create_embedding_main_passage(article_main_passage_text)\n",
+    "            \n",
+    "            for table_ID, index_table_title, index_table_main_passage in (ranked_tables_index):\n",
+    "                    \n",
+    "                table_title_embedding = create_embedding_title(str(index_table_title))\n",
+    "                table_main_passage_embedding = create_embedding_main_passage(str(index_table_main_passage))\n",
     "\n",
     "                article_title.append(article_title_embedding)\n",
-    "                title_table.append(table_title_embedding)\n",
+    "                article_main_passage.append(article_main_passage_embedding)\n",
+    "                table_title.append(table_title_embedding)\n",
+    "                table_main_passage.append(table_main_passage_embedding)\n",
     "\n",
-    "            article_title = np.array(article_title)\n",
-    "            title_table = np.array(title_table)\n",
-    "\n",
-    "            table_ranking_model = ranking_model.predict([article_title,title_table])\n",
+    "            article_title = np.array(article_title, dtype='float16')\n",
+    "            article_main_passage = np.array(article_main_passage, dtype='float16')\n",
+    "            table_title = np.array(table_title, dtype='float16')\n",
+    "            table_main_passage = np.array(table_main_passage, dtype='float16')\n",
+    "           \n",
+    "            table_ranking_model = ranking_model.predict([article_title, article_main_passage, table_title, table_main_passage])\n",
     "\n",
     "            for i in range(0,len(table_ranking_model)):\n",
     "\n",
     "                ranked_tables_model.append([ranked_tables_index[i][0],ranked_tables_index[i][1],table_ranking_model[i][0]]) \n",
     "\n",
     "            data_frame = pd.DataFrame(ranked_tables_model, columns = ['table_ID', 'table_title','table_ranking']) \n",
-    "            data_frame_sorting = data_frame.sort_values('table_ranking', ascending=False)\n",
-    "            #final_ranked_tables = data_frame_sorting.iloc[0:TOP_K,0:1].values\n",
+    "            data_frame_sorting = data_frame.sort_values('table_ranking', ascending=False)   \n",
+    "#             final_ranked_tables = data_frame_sorting.iloc[0:TOP_K,0:1].values\n",
     "            \n",
     "            selected_top = data_frame_sorting.head(TOP_K)\n",
     "            min_score = selected_top['table_ranking'].min()\n",
     "            draw_tables_socres = data_frame_sorting[data_frame_sorting['table_ranking'] >= min_score]\n",
     "            final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
-    "\n",
+    "        \n",
     "            accuracy.append(get_accuracy(article_ID, final_ranked_tables))\n",
     "\n",
     "    result.append([\"Acc@\"+str(k),str(round(np.mean(accuracy),4))])"
@@ -276,20 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1026it [01:09, 14.81it/s]\n",
-      "1026it [01:10, 14.58it/s]\n",
-      "1026it [01:10, 14.63it/s]\n",
-      "1026it [01:09, 14.77it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy_K = [1,5,10,20]\n",
     "\n",
@@ -300,23 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Acc@1', '0.2874'],\n",
-       " ['Acc@5', '0.3177'],\n",
-       " ['Acc@10', '0.3382'],\n",
-       " ['Acc@20', '0.3685']]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result"
    ]
@@ -326,7 +367,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# [['Acc@1', '0.3558'],\n",
+    "#  ['Acc@5', '0.3977'],\n",
+    "#  ['Acc@10', '0.4386'],\n",
+    "#  ['Acc@20', '0.4932']]"
+   ]
   },
   {
    "cell_type": "code",
