--- a/model_title/05_affinity_matrix_several_representations_model_title.ipynb
+++ b/model_title/05_affinity_matrix_several_representations_model_title.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('create_true_false_samples/true_pairs_by_cosine_070_title.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('create_true_false_samples/false_pairs_by_pandas_title.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*10)"
+    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
+    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
+    "false_pairs = false_pairs.head((len(true_pairs))*1)"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "169500it [00:52, 3218.83it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "train_article_title = []\n",
     "train_table_title = []\n",
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(169500, 31, 50)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_article_title.shape"
    ]
@@ -166,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "18834it [00:05, 3256.54it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "validation_article_title = []\n",
     "validation_table_title = []\n",
@@ -183,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,26 +221,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18834, 31, 50)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "validation_article_title.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def coattention_method(query, document):\n",
+    "def affinity_method(query, document):\n",
     "    \n",
     "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
     "    \n",
     "    affinity = tf.matmul(query,transpose_document)\n",
     "    \n",
-    "    return affinity"
+    "    normalize_affinity = tf.nn.softmax(affinity)\n",
+    "    \n",
+    "    return normalize_affinity"
    ]
   },
   {
@@ -225,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,16 +274,20 @@
     "    article_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    table_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    \n",
-    "    encodding_article_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(article_title)\n",
-    "    encodding_table_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(table_title)\n",
+    "    context_titleA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
+    "    context_titleB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    \n",
-    "    attention_titleA_titleB = coattention_method(encodding_article_title,encodding_table_title)\n",
+    "    affinity_titleA_titleB = affinity_method(context_titleA,context_titleB)\n",
+    "    context_affinity = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleA_titleB)\n",
+    "    learned_vectorA = tf.keras.layers.Flatten()(context_affinity)\n",
     "    \n",
-    "    encodding_attention = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(attention_titleA_titleB)\n",
+    "    affinity_embedding_titleA_titleB = affinity_method(article_title,table_title)\n",
+    "    context_affinity_embedding = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_embedding_titleA_titleB)\n",
+    "    learned_vectorB = tf.keras.layers.Flatten()(context_affinity_embedding)\n",
     "    \n",
-    "    learned_vector = tf.keras.layers.Flatten()(encodding_attention)\n",
+    "    final_representation = tf.keras.layers.Concatenate()([learned_vectorA,learned_vectorB])\n",
     "   \n",
-    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(learned_vector)\n",
+    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(final_representation)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
     "    MLP_hidden = tf.keras.layers.Dense(32, activation='relu')(dropout1)\n",
     "    dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(MLP_hidden)\n",
@@ -256,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,23 +325,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"affinity_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"affinity_matrix_several_representations_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 169500 samples, validate on 18834 samples\n",
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f6e23fd18c8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f6e23fd18c8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2340 - accuracy: 0.9106\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.93315, saving model to affinity_matrix_several_representations_model_title_01_0.9332.h5\n",
+      "169500/169500 [==============================] - 130s 770us/sample - loss: 0.2339 - accuracy: 0.9106 - val_loss: 0.1664 - val_accuracy: 0.9332\n",
+      "Epoch 2/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1713 - accuracy: 0.9357\n",
+      "Epoch 00002: val_accuracy did not improve from 0.93315\n",
+      "169500/169500 [==============================] - 121s 713us/sample - loss: 0.1713 - accuracy: 0.9358 - val_loss: 0.1740 - val_accuracy: 0.9281\n",
+      "Epoch 3/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1489 - accuracy: 0.9437\n",
+      "Epoch 00003: val_accuracy improved from 0.93315 to 0.94420, saving model to affinity_matrix_several_representations_model_title_03_0.9442.h5\n",
+      "169500/169500 [==============================] - 121s 714us/sample - loss: 0.1489 - accuracy: 0.9437 - val_loss: 0.1414 - val_accuracy: 0.9442\n",
+      "Epoch 4/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1355 - accuracy: 0.9484\n",
+      "Epoch 00004: val_accuracy improved from 0.94420 to 0.94563, saving model to affinity_matrix_several_representations_model_title_04_0.9456.h5\n",
+      "169500/169500 [==============================] - 121s 714us/sample - loss: 0.1355 - accuracy: 0.9484 - val_loss: 0.1355 - val_accuracy: 0.9456\n",
+      "Epoch 5/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1238 - accuracy: 0.9514\n",
+      "Epoch 00005: val_accuracy improved from 0.94563 to 0.94568, saving model to affinity_matrix_several_representations_model_title_05_0.9457.h5\n",
+      "169500/169500 [==============================] - 121s 714us/sample - loss: 0.1238 - accuracy: 0.9514 - val_loss: 0.1412 - val_accuracy: 0.9457\n",
+      "Epoch 6/10\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1152 - accuracy: 0.9556\n",
+      "Epoch 00006: val_accuracy improved from 0.94568 to 0.94903, saving model to affinity_matrix_several_representations_model_title_06_0.9490.h5\n",
+      "169500/169500 [==============================] - 121s 714us/sample - loss: 0.1152 - accuracy: 0.9556 - val_loss: 0.1360 - val_accuracy: 0.9490\n",
+      "Epoch 7/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1096 - accuracy: 0.9570\n",
+      "Epoch 00007: val_accuracy improved from 0.94903 to 0.94908, saving model to affinity_matrix_several_representations_model_title_07_0.9491.h5\n",
+      "169500/169500 [==============================] - 121s 713us/sample - loss: 0.1096 - accuracy: 0.9570 - val_loss: 0.1411 - val_accuracy: 0.9491\n",
+      "Epoch 8/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1029 - accuracy: 0.9593\n",
+      "Epoch 00008: val_accuracy did not improve from 0.94908\n",
+      "169500/169500 [==============================] - 121s 714us/sample - loss: 0.1029 - accuracy: 0.9593 - val_loss: 0.1457 - val_accuracy: 0.9476\n",
+      "Epoch 9/10\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0983 - accuracy: 0.9614\n",
+      "Epoch 00009: val_accuracy did not improve from 0.94908\n",
+      "169500/169500 [==============================] - 121s 714us/sample - loss: 0.0983 - accuracy: 0.9615 - val_loss: 0.1578 - val_accuracy: 0.9448\n",
+      "Epoch 10/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0929 - accuracy: 0.9633\n",
+      "Epoch 00010: val_accuracy did not improve from 0.94908\n",
+      "169500/169500 [==============================] - 121s 713us/sample - loss: 0.0929 - accuracy: 0.9633 - val_loss: 0.1569 - val_accuracy: 0.9489\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=20, \n",
+    "          epochs=10, \n",
     "          batch_size=32, \n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
