--- a/model_title/06_single_attention_model_title.ipynb
+++ b/model_title/06_single_attention_model_title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('create_true_false_samples/true_pairs_by_cosine_070_title.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('create_true_false_samples/false_pairs_by_pandas_title.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs)))"
+    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
+    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
+    "false_pairs = false_pairs.head((len(true_pairs))*1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "169500it [00:52, 3228.23it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "train_article_title = []\n",
     "train_table_title = []\n",
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(169500, 31, 50)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_article_title.shape"
    ]
@@ -166,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "18834it [00:05, 3232.07it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "validation_article_title = []\n",
     "validation_table_title = []\n",
@@ -183,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,26 +221,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18834, 31, 50)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "validation_article_title.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def coattention_method(query, document):\n",
+    "def attention_method(query, key, value):\n",
     "    \n",
-    "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
+    "    scores = tf.matmul(query, key, transpose_b=True)\n",
     "    \n",
-    "    affinity = tf.matmul(query,transpose_document)\n",
+    "    distribution = tf.nn.softmax(scores)\n",
     "    \n",
-    "    return affinity"
+    "    attention_matrix = tf.matmul(distribution, value)\n",
+    "    \n",
+    "    return attention_matrix"
    ]
   },
   {
@@ -225,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,23 +274,13 @@
     "    article_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    table_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    \n",
-    "    encodding_article_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(article_title)\n",
-    "    encodding_table_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(table_title)\n",
+    "    affinity_titleA_titleB = attention_method(article_title,table_title,article_title)\n",
     "    \n",
-    "    attention_titleA_titleB = coattention_method(encodding_article_title,encodding_table_title)\n",
-    "    attention_titleB_titleA = coattention_method(encodding_table_title,encodding_article_title)\n",
-    "    \n",
-    "    encodding_attentionAB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(attention_titleA_titleB)\n",
-    "    encodding_attentionBA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True, dropout=0.5))(attention_titleB_titleA)\n",
-    "     \n",
-    "    vector_AB = tf.keras.layers.Flatten()(encodding_attentionAB)\n",
-    "    vector_BA = tf.keras.layers.Flatten()(encodding_attentionBA)\n",
-    "    \n",
-    "    learned_vector = tf.keras.layers.Concatenate()([vector_AB,vector_BA])\n",
+    "    learned_vector = tf.keras.layers.Flatten()(affinity_titleA_titleB)\n",
     "   \n",
-    "    MLP_input = tf.keras.layers.Dense(128, activation='relu')(learned_vector)\n",
+    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(learned_vector)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
-    "    MLP_hidden = tf.keras.layers.Dense(64, activation='relu')(dropout1)\n",
+    "    MLP_hidden = tf.keras.layers.Dense(32, activation='relu')(dropout1)\n",
     "    dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(MLP_hidden)\n",
     "    MLP_output = tf.keras.layers.Dense(1,activation='sigmoid')(dropout2)\n",
     "    \n",
@@ -261,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,29 +303,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.compile(loss=\"binary_crossentropy\",optimizer=\"adam\", metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"double_affinity_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"single_attention_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 169500 samples, validate on 18834 samples\n",
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7fc9ab9681e0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7fc9ab9681e0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "168288/169500 [============================>.] - ETA: 0s - loss: 0.4627 - accuracy: 0.7953\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.83286, saving model to single_attention_model_title_01_0.8329.h5\n",
+      "169500/169500 [==============================] - 7s 44us/sample - loss: 0.4624 - accuracy: 0.7955 - val_loss: 0.3874 - val_accuracy: 0.8329\n",
+      "Epoch 2/10\n",
+      "168544/169500 [============================>.] - ETA: 0s - loss: 0.4177 - accuracy: 0.8242\n",
+      "Epoch 00002: val_accuracy improved from 0.83286 to 0.84592, saving model to single_attention_model_title_02_0.8459.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.4176 - accuracy: 0.8242 - val_loss: 0.3659 - val_accuracy: 0.8459\n",
+      "Epoch 3/10\n",
+      "169088/169500 [============================>.] - ETA: 0s - loss: 0.4027 - accuracy: 0.8320\n",
+      "Epoch 00003: val_accuracy improved from 0.84592 to 0.85224, saving model to single_attention_model_title_03_0.8522.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.4027 - accuracy: 0.8321 - val_loss: 0.3558 - val_accuracy: 0.8522\n",
+      "Epoch 4/10\n",
+      "168288/169500 [============================>.] - ETA: 0s - loss: 0.3941 - accuracy: 0.8373\n",
+      "Epoch 00004: val_accuracy improved from 0.85224 to 0.85362, saving model to single_attention_model_title_04_0.8536.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3940 - accuracy: 0.8373 - val_loss: 0.3535 - val_accuracy: 0.8536\n",
+      "Epoch 5/10\n",
+      "168608/169500 [============================>.] - ETA: 0s - loss: 0.3870 - accuracy: 0.8413\n",
+      "Epoch 00005: val_accuracy improved from 0.85362 to 0.85675, saving model to single_attention_model_title_05_0.8567.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3870 - accuracy: 0.8413 - val_loss: 0.3466 - val_accuracy: 0.8567\n",
+      "Epoch 6/10\n",
+      "169248/169500 [============================>.] - ETA: 0s - loss: 0.3817 - accuracy: 0.8431\n",
+      "Epoch 00006: val_accuracy improved from 0.85675 to 0.85786, saving model to single_attention_model_title_06_0.8579.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3817 - accuracy: 0.8431 - val_loss: 0.3422 - val_accuracy: 0.8579\n",
+      "Epoch 7/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.3769 - accuracy: 0.8461\n",
+      "Epoch 00007: val_accuracy improved from 0.85786 to 0.86100, saving model to single_attention_model_title_07_0.8610.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3770 - accuracy: 0.8461 - val_loss: 0.3390 - val_accuracy: 0.8610\n",
+      "Epoch 8/10\n",
+      "168352/169500 [============================>.] - ETA: 0s - loss: 0.3730 - accuracy: 0.8476\n",
+      "Epoch 00008: val_accuracy improved from 0.86100 to 0.86169, saving model to single_attention_model_title_08_0.8617.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3729 - accuracy: 0.8477 - val_loss: 0.3387 - val_accuracy: 0.8617\n",
+      "Epoch 9/10\n",
+      "169248/169500 [============================>.] - ETA: 0s - loss: 0.3718 - accuracy: 0.8492\n",
+      "Epoch 00009: val_accuracy improved from 0.86169 to 0.86381, saving model to single_attention_model_title_09_0.8638.h5\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3717 - accuracy: 0.8493 - val_loss: 0.3343 - val_accuracy: 0.8638\n",
+      "Epoch 10/10\n",
+      "169216/169500 [============================>.] - ETA: 0s - loss: 0.3673 - accuracy: 0.8512\n",
+      "Epoch 00010: val_accuracy did not improve from 0.86381\n",
+      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3672 - accuracy: 0.8513 - val_loss: 0.3360 - val_accuracy: 0.8626\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=20, \n",
+    "          epochs=10, \n",
     "          batch_size=32, \n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
