affinity, attention and coattention models

--- a/model_title/best_model_affinity.ipynb
+++ b/model_title/best_model_affinity.ipynb
@@ -27,18 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('train_data_1M.csv', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('validation_data_1M.csv', delimiter=',')"
    ]
   },
   {
@@ -53,9 +43,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -65,13 +53,6 @@
    "source": [
     "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -101,6 +82,7 @@
     "    if len(value) < MAX_PAD:\n",
     "        \n",
     "        embedding = embedding_model.wv[value]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        padding_embedding = sequence_padding(embedding.shape[0],embedding)\n",
     "        \n",
@@ -109,16 +91,10 @@
     "    else:\n",
     "        \n",
     "        embedding = embedding_model.wv[value[0:MAX_PAD]]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -143,18 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_article_title = np.array(train_article_title)\n",
-    "train_table_title = np.array(train_table_title)\n",
+    "train_article_title = np.array(train_article_title,dtype='float16')\n",
+    "train_table_title = np.array(train_table_title,dtype='float16')\n",
     "train_label = np.array(train_label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_article_title.shape"
    ]
   },
   {
@@ -187,8 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_article_title = np.array(validation_article_title)\n",
-    "validation_table_title = np.array(validation_table_title)\n",
+    "validation_article_title = np.array(validation_article_title,dtype='float16')\n",
+    "validation_table_title = np.array(validation_table_title,dtype='float16')\n",
     "validation_label = np.array(validation_label)"
    ]
   },
@@ -197,9 +164,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "validation_article_title.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -207,15 +172,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def attention_method(query, key, value):\n",
+    "def affinity_method(query, document):\n",
     "    \n",
-    "    scores = tf.matmul(query, key, transpose_b=True)\n",
+    "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
     "    \n",
-    "    distribution = tf.nn.softmax(scores)\n",
+    "    affinity = tf.matmul(query,transpose_document)\n",
     "    \n",
-    "    attention_matrix = tf.matmul(distribution, value)\n",
+    "    normalize_affinity = tf.nn.softmax(affinity)\n",
     "    \n",
-    "    return attention_matrix"
+    "    return normalize_affinity"
    ]
   },
   {
@@ -239,11 +204,11 @@
     "    context_titleA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
     "    context_titleB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    \n",
-    "    affinity_titleA_titleB = attention_method(context_titleA,context_titleB,context_titleA)\n",
+    "    affinity_titleA_titleB = affinity_method(context_titleA,context_titleB)\n",
     "    context_affinity = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleA_titleB)\n",
     "    learned_vectorA = tf.keras.layers.Flatten()(context_affinity)\n",
     "    \n",
-    "    affinity_embedding_titleA_titleB = attention_method(article_title,table_title,article_title)\n",
+    "    affinity_embedding_titleA_titleB = affinity_method(article_title,table_title)\n",
     "    context_affinity_embedding = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_embedding_titleA_titleB)\n",
     "    learned_vectorB = tf.keras.layers.Flatten()(context_affinity_embedding)\n",
     "    \n",
@@ -274,13 +239,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model.compile(loss=\"binary_crossentropy\",optimizer=\"adam\", metrics=['accuracy'])"
    ]
@@ -291,8 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"attention_matrix_several_representations_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
-    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
+    "filepath=\"best_model_title_affinity_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=2, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
@@ -303,123 +261,12 @@
    "outputs": [],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=10, \n",
-    "          batch_size=32, \n",
+    "          epochs=20, \n",
+    "          batch_size=32,\n",
+    "          verbose=2,\n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# summarize history for accuracy\n",
-    "plt.plot(history.history['accuracy'])\n",
-    "plt.plot(history.history['val_accuracy'])\n",
-    "plt.title('model accuracy')\n",
-    "plt.ylabel('accuracy')\n",
-    "plt.xlabel('epoch')\n",
-    "plt.legend(['train', 'validation'], loc='upper left')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# summarize history for loss\n",
-    "plt.plot(history.history['loss'])\n",
-    "plt.plot(history.history['val_loss'])\n",
-    "plt.title('model loss')\n",
-    "plt.ylabel('loss')\n",
-    "plt.xlabel('epoch')\n",
-    "plt.legend(['train', 'validation'], loc='upper left')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = tf.keras.models.load_model('affinity_model_train_cossine.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_prob = model.predict([validation_article_title,validation_table_title])\n",
-    "y_predict = (y_prob > 0.5).astype(np.int)\n",
-    "accuracy_score(validation_label, y_predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "import sklearn.metrics\n",
-    "confusion_matrix = sklearn.metrics.confusion_matrix(validation_label, y_predict)\n",
-    "\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(confusion_matrix, annot=True, fmt=\"d\", cmap=\"YlGnBu\")#, annot_kws={\"size\": 15});\n",
-    "plt.title(\"Confusion matrix\")\n",
-    "plt.ylabel('True label')\n",
-    "plt.xlabel('Predict label')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
