--- a/model_title/aff_02_single_affinity_plus_context_model_title.ipynb
+++ b/model_title/aff_02_single_affinity_plus_context_model_title.ipynb
@@ -27,18 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/final_train_dataset', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/final_validation_dataset', delimiter=',')"
    ]
   },
   {
@@ -50,16 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "169500it [00:52, 3236.32it/s]\n"
+      "169500it [00:51, 3262.22it/s]\n"
      ]
     }
    ],
@@ -147,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +148,7 @@
        "(169500, 31, 50)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18834it [00:05, 3263.14it/s]\n"
+      "18834it [00:05, 3261.17it/s]\n"
      ]
     }
    ],
@@ -210,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +211,7 @@
        "(18834, 31, 50)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -337,57 +318,97 @@
      "output_type": "stream",
      "text": [
       "Train on 169500 samples, validate on 18834 samples\n",
-      "Epoch 1/10\n",
+      "Epoch 1/20\n",
       "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f0b0f4b2ae8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f0b0f4b2ae8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3555 - accuracy: 0.8602\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.86912, saving model to single_affinity_plus_context_model_title_01_0.8691.h5\n",
-      "169500/169500 [==============================] - 51s 303us/sample - loss: 0.3554 - accuracy: 0.8602 - val_loss: 0.3154 - val_accuracy: 0.8691\n",
-      "Epoch 2/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3195 - accuracy: 0.8767\n",
-      "Epoch 00002: val_accuracy improved from 0.86912 to 0.88319, saving model to single_affinity_plus_context_model_title_02_0.8832.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.3195 - accuracy: 0.8767 - val_loss: 0.2938 - val_accuracy: 0.8832\n",
-      "Epoch 3/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3110 - accuracy: 0.8793\n",
-      "Epoch 00003: val_accuracy improved from 0.88319 to 0.88351, saving model to single_affinity_plus_context_model_title_03_0.8835.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.3110 - accuracy: 0.8793 - val_loss: 0.2869 - val_accuracy: 0.8835\n",
-      "Epoch 4/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3062 - accuracy: 0.8821\n",
-      "Epoch 00004: val_accuracy improved from 0.88351 to 0.88887, saving model to single_affinity_plus_context_model_title_04_0.8889.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.3061 - accuracy: 0.8821 - val_loss: 0.2808 - val_accuracy: 0.8889\n",
-      "Epoch 5/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3012 - accuracy: 0.8839\n",
-      "Epoch 00005: val_accuracy improved from 0.88887 to 0.88977, saving model to single_affinity_plus_context_model_title_05_0.8898.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.3012 - accuracy: 0.8839 - val_loss: 0.2767 - val_accuracy: 0.8898\n",
-      "Epoch 6/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2973 - accuracy: 0.8849\n",
-      "Epoch 00006: val_accuracy improved from 0.88977 to 0.89015, saving model to single_affinity_plus_context_model_title_06_0.8901.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2973 - accuracy: 0.8849 - val_loss: 0.2806 - val_accuracy: 0.8901\n",
-      "Epoch 7/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2960 - accuracy: 0.8859\n",
-      "Epoch 00007: val_accuracy improved from 0.89015 to 0.89094, saving model to single_affinity_plus_context_model_title_07_0.8909.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2960 - accuracy: 0.8859 - val_loss: 0.2721 - val_accuracy: 0.8909\n",
-      "Epoch 8/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2939 - accuracy: 0.8867\n",
-      "Epoch 00008: val_accuracy improved from 0.89094 to 0.89110, saving model to single_affinity_plus_context_model_title_08_0.8911.h5\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2939 - accuracy: 0.8867 - val_loss: 0.2750 - val_accuracy: 0.8911\n",
-      "Epoch 9/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2911 - accuracy: 0.8874\n",
-      "Epoch 00009: val_accuracy did not improve from 0.89110\n",
-      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2911 - accuracy: 0.8874 - val_loss: 0.2714 - val_accuracy: 0.8903\n",
-      "Epoch 10/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2897 - accuracy: 0.8884\n",
-      "Epoch 00010: val_accuracy improved from 0.89110 to 0.89153, saving model to single_affinity_plus_context_model_title_10_0.8915.h5\n",
-      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2897 - accuracy: 0.8884 - val_loss: 0.2695 - val_accuracy: 0.8915\n"
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f654e984598> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f654e984598> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "169344/169500 [============================>.] - ETA: 0s - loss: 0.3623 - accuracy: 0.8579\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.87703, saving model to single_affinity_plus_context_model_title_01_0.8770.h5\n",
+      "169500/169500 [==============================] - 53s 312us/sample - loss: 0.3622 - accuracy: 0.8579 - val_loss: 0.2995 - val_accuracy: 0.8770\n",
+      "Epoch 2/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.3231 - accuracy: 0.8755\n",
+      "Epoch 00002: val_accuracy improved from 0.87703 to 0.88207, saving model to single_affinity_plus_context_model_title_02_0.8821.h5\n",
+      "169500/169500 [==============================] - 49s 291us/sample - loss: 0.3231 - accuracy: 0.8755 - val_loss: 0.2993 - val_accuracy: 0.8821\n",
+      "Epoch 3/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3158 - accuracy: 0.8785\n",
+      "Epoch 00003: val_accuracy improved from 0.88207 to 0.88340, saving model to single_affinity_plus_context_model_title_03_0.8834.h5\n",
+      "169500/169500 [==============================] - 49s 290us/sample - loss: 0.3159 - accuracy: 0.8784 - val_loss: 0.2948 - val_accuracy: 0.8834\n",
+      "Epoch 4/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3112 - accuracy: 0.8801\n",
+      "Epoch 00004: val_accuracy did not improve from 0.88340\n",
+      "169500/169500 [==============================] - 49s 289us/sample - loss: 0.3113 - accuracy: 0.8801 - val_loss: 0.2947 - val_accuracy: 0.8780\n",
+      "Epoch 5/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3078 - accuracy: 0.8815\n",
+      "Epoch 00005: val_accuracy improved from 0.88340 to 0.88813, saving model to single_affinity_plus_context_model_title_05_0.8881.h5\n",
+      "169500/169500 [==============================] - 49s 289us/sample - loss: 0.3077 - accuracy: 0.8815 - val_loss: 0.2841 - val_accuracy: 0.8881\n",
+      "Epoch 6/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3042 - accuracy: 0.8833\n",
+      "Epoch 00006: val_accuracy did not improve from 0.88813\n",
+      "169500/169500 [==============================] - 49s 289us/sample - loss: 0.3042 - accuracy: 0.8833 - val_loss: 0.2815 - val_accuracy: 0.8881\n",
+      "Epoch 7/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3030 - accuracy: 0.8847\n",
+      "Epoch 00007: val_accuracy did not improve from 0.88813\n",
+      "169500/169500 [==============================] - 49s 289us/sample - loss: 0.3030 - accuracy: 0.8847 - val_loss: 0.2819 - val_accuracy: 0.8875\n",
+      "Epoch 8/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3003 - accuracy: 0.8845\n",
+      "Epoch 00008: val_accuracy did not improve from 0.88813\n",
+      "169500/169500 [==============================] - 49s 289us/sample - loss: 0.3003 - accuracy: 0.8845 - val_loss: 0.2764 - val_accuracy: 0.8879\n",
+      "Epoch 9/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2987 - accuracy: 0.8855\n",
+      "Epoch 00009: val_accuracy did not improve from 0.88813\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2988 - accuracy: 0.8855 - val_loss: 0.2854 - val_accuracy: 0.8855\n",
+      "Epoch 10/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2961 - accuracy: 0.8865\n",
+      "Epoch 00010: val_accuracy improved from 0.88813 to 0.88951, saving model to single_affinity_plus_context_model_title_10_0.8895.h5\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2961 - accuracy: 0.8865 - val_loss: 0.2765 - val_accuracy: 0.8895\n",
+      "Epoch 11/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2954 - accuracy: 0.8873\n",
+      "Epoch 00011: val_accuracy improved from 0.88951 to 0.89105, saving model to single_affinity_plus_context_model_title_11_0.8910.h5\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2954 - accuracy: 0.8873 - val_loss: 0.2755 - val_accuracy: 0.8910\n",
+      "Epoch 12/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2935 - accuracy: 0.8875\n",
+      "Epoch 00012: val_accuracy did not improve from 0.89105\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2935 - accuracy: 0.8875 - val_loss: 0.2731 - val_accuracy: 0.8900\n",
+      "Epoch 13/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2924 - accuracy: 0.8882\n",
+      "Epoch 00013: val_accuracy improved from 0.89105 to 0.89264, saving model to single_affinity_plus_context_model_title_13_0.8926.h5\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2924 - accuracy: 0.8882 - val_loss: 0.2708 - val_accuracy: 0.8926\n",
+      "Epoch 14/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2908 - accuracy: 0.8885\n",
+      "Epoch 00014: val_accuracy did not improve from 0.89264\n",
+      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2908 - accuracy: 0.8885 - val_loss: 0.2716 - val_accuracy: 0.8909\n",
+      "Epoch 15/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2906 - accuracy: 0.8888\n",
+      "Epoch 00015: val_accuracy did not improve from 0.89264\n",
+      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2906 - accuracy: 0.8888 - val_loss: 0.2735 - val_accuracy: 0.8891\n",
+      "Epoch 16/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2882 - accuracy: 0.8895\n",
+      "Epoch 00016: val_accuracy did not improve from 0.89264\n",
+      "169500/169500 [==============================] - 51s 300us/sample - loss: 0.2882 - accuracy: 0.8895 - val_loss: 0.2726 - val_accuracy: 0.8901\n",
+      "Epoch 17/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2880 - accuracy: 0.8898\n",
+      "Epoch 00017: val_accuracy improved from 0.89264 to 0.89333, saving model to single_affinity_plus_context_model_title_17_0.8933.h5\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2880 - accuracy: 0.8898 - val_loss: 0.2691 - val_accuracy: 0.8933\n",
+      "Epoch 18/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2870 - accuracy: 0.8900\n",
+      "Epoch 00018: val_accuracy did not improve from 0.89333\n",
+      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2869 - accuracy: 0.8900 - val_loss: 0.2722 - val_accuracy: 0.8931\n",
+      "Epoch 19/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2858 - accuracy: 0.8904\n",
+      "Epoch 00019: val_accuracy did not improve from 0.89333\n",
+      "169500/169500 [==============================] - 49s 288us/sample - loss: 0.2858 - accuracy: 0.8904 - val_loss: 0.2682 - val_accuracy: 0.8915\n",
+      "Epoch 20/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2851 - accuracy: 0.8906\n",
+      "Epoch 00020: val_accuracy improved from 0.89333 to 0.89354, saving model to single_affinity_plus_context_model_title_20_0.8935.h5\n",
+      "169500/169500 [==============================] - 49s 287us/sample - loss: 0.2851 - accuracy: 0.8906 - val_loss: 0.2722 - val_accuracy: 0.8935\n"
      ]
     }
    ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=10, \n",
+    "          epochs=20, \n",
     "          batch_size=32, \n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
