--- a/model_title/aff_03_context_plus_single_affinity_model_title.ipynb
+++ b/model_title/aff_03_context_plus_single_affinity_model_title.ipynb
@@ -27,18 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/final_train_dataset', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/final_validation_dataset', delimiter=',')"
    ]
   },
   {
@@ -50,16 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "169500it [00:52, 3224.86it/s]\n"
+      "169500it [00:52, 3245.98it/s]\n"
      ]
     }
    ],
@@ -147,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +162,7 @@
        "(169500, 31, 50)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18834it [00:05, 3303.46it/s]\n"
+      "18834it [00:05, 3259.82it/s]\n"
      ]
     }
    ],
@@ -210,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +225,7 @@
        "(18834, 31, 50)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -338,54 +333,97 @@
      "output_type": "stream",
      "text": [
       "Train on 169500 samples, validate on 18834 samples\n",
-      "Epoch 1/10\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7fe66b30cea0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7fe66b30cea0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "169408/169500 [============================>.] - ETA: 0s - loss: 0.4622 - accuracy: 0.7418\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.90501, saving model to context_plus_single_affinity_model_title_01_0.9050.h5\n",
-      "169500/169500 [==============================] - 69s 405us/sample - loss: 0.4621 - accuracy: 0.7419 - val_loss: 0.2390 - val_accuracy: 0.9050\n",
-      "Epoch 2/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2562 - accuracy: 0.9040\n",
-      "Epoch 00002: val_accuracy improved from 0.90501 to 0.91855, saving model to context_plus_single_affinity_model_title_02_0.9186.h5\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.2562 - accuracy: 0.9040 - val_loss: 0.2108 - val_accuracy: 0.9186\n",
-      "Epoch 3/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2263 - accuracy: 0.9173\n",
-      "Epoch 00003: val_accuracy did not improve from 0.91855\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.2263 - accuracy: 0.9174 - val_loss: 0.2173 - val_accuracy: 0.9150\n",
-      "Epoch 4/10\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.2092 - accuracy: 0.9248\n",
-      "Epoch 00004: val_accuracy improved from 0.91855 to 0.92567, saving model to context_plus_single_affinity_model_title_04_0.9257.h5\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.2092 - accuracy: 0.9248 - val_loss: 0.1940 - val_accuracy: 0.9257\n",
-      "Epoch 5/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1960 - accuracy: 0.9303\n",
-      "Epoch 00005: val_accuracy did not improve from 0.92567\n",
-      "169500/169500 [==============================] - 64s 377us/sample - loss: 0.1960 - accuracy: 0.9303 - val_loss: 0.1914 - val_accuracy: 0.9234\n",
-      "Epoch 6/10\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1849 - accuracy: 0.9343\n",
-      "Epoch 00006: val_accuracy improved from 0.92567 to 0.92837, saving model to context_plus_single_affinity_model_title_06_0.9284.h5\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.1849 - accuracy: 0.9343 - val_loss: 0.1947 - val_accuracy: 0.9284\n",
-      "Epoch 7/10\n",
-      "169408/169500 [============================>.] - ETA: 0s - loss: 0.1761 - accuracy: 0.9371\n",
-      "Epoch 00007: val_accuracy improved from 0.92837 to 0.92891, saving model to context_plus_single_affinity_model_title_07_0.9289.h5\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.1761 - accuracy: 0.9372 - val_loss: 0.1889 - val_accuracy: 0.9289\n",
-      "Epoch 8/10\n",
-      "169344/169500 [============================>.] - ETA: 0s - loss: 0.1685 - accuracy: 0.9399\n",
-      "Epoch 00008: val_accuracy did not improve from 0.92891\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.1685 - accuracy: 0.9398 - val_loss: 0.1807 - val_accuracy: 0.9273\n",
-      "Epoch 9/10\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1619 - accuracy: 0.9432\n",
-      "Epoch 00009: val_accuracy did not improve from 0.92891\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.1619 - accuracy: 0.9432 - val_loss: 0.1809 - val_accuracy: 0.9287\n",
-      "Epoch 10/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.1538 - accuracy: 0.9447\n",
-      "Epoch 00010: val_accuracy improved from 0.92891 to 0.93135, saving model to context_plus_single_affinity_model_title_10_0.9313.h5\n",
-      "169500/169500 [==============================] - 64s 378us/sample - loss: 0.1537 - accuracy: 0.9447 - val_loss: 0.1819 - val_accuracy: 0.9313\n"
+      "Epoch 1/20\n",
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f3dc883b7b8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f3dc883b7b8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2882 - accuracy: 0.8807\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.93644, saving model to context_plus_single_affinity_model_title_01_0.9364.h5\n",
+      "169500/169500 [==============================] - 68s 404us/sample - loss: 0.2882 - accuracy: 0.8807 - val_loss: 0.1829 - val_accuracy: 0.9364\n",
+      "Epoch 2/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1899 - accuracy: 0.9329\n",
+      "Epoch 00002: val_accuracy improved from 0.93644 to 0.94021, saving model to context_plus_single_affinity_model_title_02_0.9402.h5\n",
+      "169500/169500 [==============================] - 64s 375us/sample - loss: 0.1899 - accuracy: 0.9329 - val_loss: 0.1560 - val_accuracy: 0.9402\n",
+      "Epoch 3/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.1686 - accuracy: 0.9405\n",
+      "Epoch 00003: val_accuracy improved from 0.94021 to 0.94287, saving model to context_plus_single_affinity_model_title_03_0.9429.h5\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1686 - accuracy: 0.9405 - val_loss: 0.1510 - val_accuracy: 0.9429\n",
+      "Epoch 4/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1541 - accuracy: 0.9458\n",
+      "Epoch 00004: val_accuracy improved from 0.94287 to 0.94441, saving model to context_plus_single_affinity_model_title_04_0.9444.h5\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1542 - accuracy: 0.9458 - val_loss: 0.1515 - val_accuracy: 0.9444\n",
+      "Epoch 5/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1439 - accuracy: 0.9492\n",
+      "Epoch 00005: val_accuracy improved from 0.94441 to 0.94515, saving model to context_plus_single_affinity_model_title_05_0.9452.h5\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1439 - accuracy: 0.9492 - val_loss: 0.1455 - val_accuracy: 0.9452\n",
+      "Epoch 6/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1337 - accuracy: 0.9525\n",
+      "Epoch 00006: val_accuracy improved from 0.94515 to 0.94600, saving model to context_plus_single_affinity_model_title_06_0.9460.h5\n",
+      "169500/169500 [==============================] - 64s 375us/sample - loss: 0.1337 - accuracy: 0.9525 - val_loss: 0.1512 - val_accuracy: 0.9460\n",
+      "Epoch 7/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.1273 - accuracy: 0.9548\n",
+      "Epoch 00007: val_accuracy improved from 0.94600 to 0.94664, saving model to context_plus_single_affinity_model_title_07_0.9466.h5\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1273 - accuracy: 0.9548 - val_loss: 0.1487 - val_accuracy: 0.9466\n",
+      "Epoch 8/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.1191 - accuracy: 0.9574\n",
+      "Epoch 00008: val_accuracy improved from 0.94664 to 0.94675, saving model to context_plus_single_affinity_model_title_08_0.9467.h5\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1191 - accuracy: 0.9574 - val_loss: 0.1481 - val_accuracy: 0.9467\n",
+      "Epoch 9/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1146 - accuracy: 0.9591\n",
+      "Epoch 00009: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1146 - accuracy: 0.9591 - val_loss: 0.1551 - val_accuracy: 0.9450\n",
+      "Epoch 10/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1088 - accuracy: 0.9612\n",
+      "Epoch 00010: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.1088 - accuracy: 0.9612 - val_loss: 0.1583 - val_accuracy: 0.9454\n",
+      "Epoch 11/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1037 - accuracy: 0.9632\n",
+      "Epoch 00011: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 375us/sample - loss: 0.1037 - accuracy: 0.9632 - val_loss: 0.1915 - val_accuracy: 0.9382\n",
+      "Epoch 12/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.0989 - accuracy: 0.9643\n",
+      "Epoch 00012: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.0990 - accuracy: 0.9643 - val_loss: 0.1721 - val_accuracy: 0.9464\n",
+      "Epoch 13/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0945 - accuracy: 0.9667\n",
+      "Epoch 00013: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.0945 - accuracy: 0.9667 - val_loss: 0.1703 - val_accuracy: 0.9441\n",
+      "Epoch 14/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0909 - accuracy: 0.9676\n",
+      "Epoch 00014: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 375us/sample - loss: 0.0909 - accuracy: 0.9676 - val_loss: 0.1813 - val_accuracy: 0.9455\n",
+      "Epoch 15/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0863 - accuracy: 0.9690\n",
+      "Epoch 00015: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 375us/sample - loss: 0.0864 - accuracy: 0.9690 - val_loss: 0.1877 - val_accuracy: 0.9456\n",
+      "Epoch 16/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.0842 - accuracy: 0.9707\n",
+      "Epoch 00016: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 65s 382us/sample - loss: 0.0842 - accuracy: 0.9707 - val_loss: 0.1807 - val_accuracy: 0.9454\n",
+      "Epoch 17/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0804 - accuracy: 0.9714\n",
+      "Epoch 00017: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.0804 - accuracy: 0.9714 - val_loss: 0.1991 - val_accuracy: 0.9438\n",
+      "Epoch 18/20\n",
+      "169376/169500 [============================>.] - ETA: 0s - loss: 0.0782 - accuracy: 0.9725\n",
+      "Epoch 00018: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.0782 - accuracy: 0.9725 - val_loss: 0.1896 - val_accuracy: 0.9442\n",
+      "Epoch 19/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.0751 - accuracy: 0.9739\n",
+      "Epoch 00019: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.0751 - accuracy: 0.9739 - val_loss: 0.1968 - val_accuracy: 0.9456\n",
+      "Epoch 20/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0736 - accuracy: 0.9743\n",
+      "Epoch 00020: val_accuracy did not improve from 0.94675\n",
+      "169500/169500 [==============================] - 64s 376us/sample - loss: 0.0736 - accuracy: 0.9743 - val_loss: 0.1991 - val_accuracy: 0.9445\n"
      ]
     }
    ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=10, \n",
+    "          epochs=20, \n",
     "          batch_size=32, \n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
