--- a/model_title/aff_04_context_plus_affinity_plus_context_model_title.ipynb
+++ b/model_title/aff_04_context_plus_affinity_plus_context_model_title.ipynb
@@ -27,18 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/final_train_dataset', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/final_validation_dataset', delimiter=',')"
    ]
   },
   {
@@ -50,16 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "169500it [00:52, 3222.52it/s]\n"
+      "169500it [00:52, 3221.94it/s]\n"
      ]
     }
    ],
@@ -147,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +162,7 @@
        "(169500, 31, 50)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18834it [00:05, 3267.40it/s]\n"
+      "18834it [00:05, 3248.04it/s]\n"
      ]
     }
    ],
@@ -210,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +225,7 @@
        "(18834, 31, 50)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,19 +236,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def attention_method(query, key, value):\n",
+    "def affinity_method(query, document):\n",
     "    \n",
-    "    scores = tf.matmul(query, key, transpose_b=True)\n",
+    "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
     "    \n",
-    "    distribution = tf.nn.softmax(scores)\n",
+    "    affinity = tf.matmul(query,transpose_document)\n",
     "    \n",
-    "    attention_matrix = tf.matmul(distribution, value)\n",
+    "    normalize_affinity = tf.nn.softmax(affinity)\n",
     "    \n",
-    "    return attention_matrix"
+    "    return normalize_affinity"
    ]
   },
   {
@@ -265,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +272,7 @@
     "    context_titleA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
     "    context_titleB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    \n",
-    "    affinity_titleA_titleB = attention_method(context_titleA,context_titleB,context_titleA)\n",
+    "    affinity_titleA_titleB = affinity_method(context_titleA,context_titleB)\n",
     "    \n",
     "    context_affinity = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleA_titleB)\n",
     "    \n",
@@ -296,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,18 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"context_plus_attention_plus_context_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"context_plus_affinity_plus_context_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -340,57 +335,97 @@
      "output_type": "stream",
      "text": [
       "Train on 169500 samples, validate on 18834 samples\n",
-      "Epoch 1/10\n",
+      "Epoch 1/20\n",
       "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f872a3b0c80> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f872a3b0c80> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2756 - accuracy: 0.8794\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.93570, saving model to context_plus_attention_plus_context_model_title_01_0.9357.h5\n",
-      "169500/169500 [==============================] - 114s 670us/sample - loss: 0.2756 - accuracy: 0.8794 - val_loss: 0.1698 - val_accuracy: 0.9357\n",
-      "Epoch 2/10\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1682 - accuracy: 0.9397\n",
-      "Epoch 00002: val_accuracy improved from 0.93570 to 0.94186, saving model to context_plus_attention_plus_context_model_title_02_0.9419.h5\n",
-      "169500/169500 [==============================] - 106s 627us/sample - loss: 0.1682 - accuracy: 0.9397 - val_loss: 0.1572 - val_accuracy: 0.9419\n",
-      "Epoch 3/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1483 - accuracy: 0.9455\n",
-      "Epoch 00003: val_accuracy improved from 0.94186 to 0.94282, saving model to context_plus_attention_plus_context_model_title_03_0.9428.h5\n",
-      "169500/169500 [==============================] - 106s 625us/sample - loss: 0.1483 - accuracy: 0.9455 - val_loss: 0.1622 - val_accuracy: 0.9428\n",
-      "Epoch 4/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1361 - accuracy: 0.9498\n",
-      "Epoch 00004: val_accuracy did not improve from 0.94282\n",
-      "169500/169500 [==============================] - 106s 625us/sample - loss: 0.1361 - accuracy: 0.9498 - val_loss: 0.1580 - val_accuracy: 0.9415\n",
-      "Epoch 5/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1258 - accuracy: 0.9535\n",
-      "Epoch 00005: val_accuracy improved from 0.94282 to 0.94600, saving model to context_plus_attention_plus_context_model_title_05_0.9460.h5\n",
-      "169500/169500 [==============================] - 106s 627us/sample - loss: 0.1258 - accuracy: 0.9535 - val_loss: 0.1508 - val_accuracy: 0.9460\n",
-      "Epoch 6/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1183 - accuracy: 0.9556\n",
-      "Epoch 00006: val_accuracy did not improve from 0.94600\n",
-      "169500/169500 [==============================] - 106s 628us/sample - loss: 0.1183 - accuracy: 0.9556 - val_loss: 0.1509 - val_accuracy: 0.9459\n",
-      "Epoch 7/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1107 - accuracy: 0.9579\n",
-      "Epoch 00007: val_accuracy did not improve from 0.94600\n",
-      "169500/169500 [==============================] - 106s 627us/sample - loss: 0.1107 - accuracy: 0.9579 - val_loss: 0.1700 - val_accuracy: 0.9447\n",
-      "Epoch 8/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1048 - accuracy: 0.9599\n",
-      "Epoch 00008: val_accuracy did not improve from 0.94600\n",
-      "169500/169500 [==============================] - 106s 626us/sample - loss: 0.1048 - accuracy: 0.9599 - val_loss: 0.1643 - val_accuracy: 0.9444\n",
-      "Epoch 9/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0994 - accuracy: 0.9617\n",
-      "Epoch 00009: val_accuracy did not improve from 0.94600\n",
-      "169500/169500 [==============================] - 106s 627us/sample - loss: 0.0994 - accuracy: 0.9617 - val_loss: 0.1720 - val_accuracy: 0.9452\n",
-      "Epoch 10/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0959 - accuracy: 0.9631\n",
-      "Epoch 00010: val_accuracy did not improve from 0.94600\n",
-      "169500/169500 [==============================] - 106s 627us/sample - loss: 0.0959 - accuracy: 0.9631 - val_loss: 0.1524 - val_accuracy: 0.9442\n"
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f06302ad9d8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f06302ad9d8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2867 - accuracy: 0.8777\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.92184, saving model to context_plus_affinity_plus_context_model_title_01_0.9218.h5\n",
+      "169500/169500 [==============================] - 113s 668us/sample - loss: 0.2867 - accuracy: 0.8777 - val_loss: 0.1968 - val_accuracy: 0.9218\n",
+      "Epoch 2/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1927 - accuracy: 0.9276\n",
+      "Epoch 00002: val_accuracy improved from 0.92184 to 0.93337, saving model to context_plus_affinity_plus_context_model_title_02_0.9334.h5\n",
+      "169500/169500 [==============================] - 105s 622us/sample - loss: 0.1927 - accuracy: 0.9276 - val_loss: 0.1811 - val_accuracy: 0.9334\n",
+      "Epoch 3/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1679 - accuracy: 0.9368\n",
+      "Epoch 00003: val_accuracy improved from 0.93337 to 0.93809, saving model to context_plus_affinity_plus_context_model_title_03_0.9381.h5\n",
+      "169500/169500 [==============================] - 105s 620us/sample - loss: 0.1679 - accuracy: 0.9368 - val_loss: 0.1639 - val_accuracy: 0.9381\n",
+      "Epoch 4/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1517 - accuracy: 0.9426\n",
+      "Epoch 00004: val_accuracy did not improve from 0.93809\n",
+      "169500/169500 [==============================] - 105s 622us/sample - loss: 0.1517 - accuracy: 0.9426 - val_loss: 0.1616 - val_accuracy: 0.9376\n",
+      "Epoch 5/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1402 - accuracy: 0.9468\n",
+      "Epoch 00005: val_accuracy did not improve from 0.93809\n",
+      "169500/169500 [==============================] - 105s 621us/sample - loss: 0.1402 - accuracy: 0.9468 - val_loss: 0.1667 - val_accuracy: 0.9353\n",
+      "Epoch 6/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1307 - accuracy: 0.9504\n",
+      "Epoch 00006: val_accuracy improved from 0.93809 to 0.93878, saving model to context_plus_affinity_plus_context_model_title_06_0.9388.h5\n",
+      "169500/169500 [==============================] - 105s 621us/sample - loss: 0.1307 - accuracy: 0.9504 - val_loss: 0.1581 - val_accuracy: 0.9388\n",
+      "Epoch 7/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1217 - accuracy: 0.9532\n",
+      "Epoch 00007: val_accuracy improved from 0.93878 to 0.94048, saving model to context_plus_affinity_plus_context_model_title_07_0.9405.h5\n",
+      "169500/169500 [==============================] - 105s 620us/sample - loss: 0.1217 - accuracy: 0.9532 - val_loss: 0.1684 - val_accuracy: 0.9405\n",
+      "Epoch 8/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1151 - accuracy: 0.9555\n",
+      "Epoch 00008: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 621us/sample - loss: 0.1151 - accuracy: 0.9555 - val_loss: 0.1670 - val_accuracy: 0.9399\n",
+      "Epoch 9/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1086 - accuracy: 0.9574\n",
+      "Epoch 00009: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 621us/sample - loss: 0.1086 - accuracy: 0.9574 - val_loss: 0.1714 - val_accuracy: 0.9363\n",
+      "Epoch 10/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1047 - accuracy: 0.9589\n",
+      "Epoch 00010: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 620us/sample - loss: 0.1047 - accuracy: 0.9589 - val_loss: 0.1906 - val_accuracy: 0.9401\n",
+      "Epoch 11/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0988 - accuracy: 0.9615\n",
+      "Epoch 00011: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 620us/sample - loss: 0.0988 - accuracy: 0.9615 - val_loss: 0.1948 - val_accuracy: 0.9402\n",
+      "Epoch 12/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0954 - accuracy: 0.9627\n",
+      "Epoch 00012: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 620us/sample - loss: 0.0953 - accuracy: 0.9627 - val_loss: 0.1900 - val_accuracy: 0.9396\n",
+      "Epoch 13/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0906 - accuracy: 0.9649\n",
+      "Epoch 00013: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 620us/sample - loss: 0.0906 - accuracy: 0.9649 - val_loss: 0.1964 - val_accuracy: 0.9393\n",
+      "Epoch 14/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0858 - accuracy: 0.9659\n",
+      "Epoch 00014: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 619us/sample - loss: 0.0858 - accuracy: 0.9659 - val_loss: 0.2277 - val_accuracy: 0.9395\n",
+      "Epoch 15/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0838 - accuracy: 0.9671\n",
+      "Epoch 00015: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 618us/sample - loss: 0.0838 - accuracy: 0.9671 - val_loss: 0.2014 - val_accuracy: 0.9400\n",
+      "Epoch 16/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0810 - accuracy: 0.9682\n",
+      "Epoch 00016: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 619us/sample - loss: 0.0810 - accuracy: 0.9682 - val_loss: 0.2211 - val_accuracy: 0.9390\n",
+      "Epoch 17/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0788 - accuracy: 0.9690\n",
+      "Epoch 00017: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 619us/sample - loss: 0.0788 - accuracy: 0.9690 - val_loss: 0.2257 - val_accuracy: 0.9378\n",
+      "Epoch 18/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0753 - accuracy: 0.9706\n",
+      "Epoch 00018: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 618us/sample - loss: 0.0753 - accuracy: 0.9706 - val_loss: 0.2659 - val_accuracy: 0.9354\n",
+      "Epoch 19/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0730 - accuracy: 0.9709\n",
+      "Epoch 00019: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 105s 618us/sample - loss: 0.0730 - accuracy: 0.9709 - val_loss: 0.2526 - val_accuracy: 0.9363\n",
+      "Epoch 20/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0714 - accuracy: 0.9722\n",
+      "Epoch 00020: val_accuracy did not improve from 0.94048\n",
+      "169500/169500 [==============================] - 104s 614us/sample - loss: 0.0714 - accuracy: 0.9722 - val_loss: 0.2645 - val_accuracy: 0.9360\n"
      ]
     }
    ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=10, \n",
+    "          epochs=20, \n",
     "          batch_size=32, \n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
