--- a/model_title/aff_05_affinity_matrix_several_representations_model_title.ipynb
+++ b/model_title/aff_05_affinity_matrix_several_representations_model_title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/final_train_dataset', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/final_validation_dataset', delimiter=',')"
    ]
   },
   {
@@ -50,16 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,17 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "169500it [00:52, 3236.10it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_article_title = []\n",
     "train_table_title = []\n",
@@ -147,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,20 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(169500, 31, 50)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_article_title.shape"
    ]
@@ -185,17 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "18834it [00:05, 3282.95it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "validation_article_title = []\n",
     "validation_table_title = []\n",
@@ -210,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,39 +175,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(18834, 31, 50)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "validation_article_title.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def attention_method(query, key, value):\n",
+    "def affinity_method(query, document):\n",
     "    \n",
-    "    scores = tf.matmul(query, key, transpose_b=True)\n",
+    "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
     "    \n",
-    "    distribution = tf.nn.softmax(scores)\n",
+    "    affinity = tf.matmul(query,transpose_document)\n",
     "    \n",
-    "    attention_matrix = tf.matmul(distribution, value)\n",
+    "    normalize_affinity = tf.nn.softmax(affinity)\n",
     "    \n",
-    "    return attention_matrix"
+    "    return normalize_affinity"
    ]
   },
   {
@@ -265,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,13 +217,20 @@
     "    article_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    table_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    \n",
-    "    affinity_titleA_titleB = attention_method(article_title,table_title,article_title)\n",
+    "    context_titleA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
+    "    context_titleB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    \n",
+    "    affinity_titleA_titleB = affinity_method(context_titleA,context_titleB)\n",
     "    context_affinity = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleA_titleB)\n",
+    "    learned_vectorA = tf.keras.layers.Flatten()(context_affinity)\n",
     "    \n",
-    "    learned_vector = tf.keras.layers.Flatten()(context_affinity)\n",
+    "    affinity_embedding_titleA_titleB = affinity_method(article_title,table_title)\n",
+    "    context_affinity_embedding = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_embedding_titleA_titleB)\n",
+    "    learned_vectorB = tf.keras.layers.Flatten()(context_affinity_embedding)\n",
+    "    \n",
+    "    final_representation = tf.keras.layers.Concatenate()([learned_vectorA,learned_vectorB])\n",
     "   \n",
-    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(learned_vector)\n",
+    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(final_representation)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
     "    MLP_hidden = tf.keras.layers.Dense(32, activation='relu')(dropout1)\n",
     "    dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(MLP_hidden)\n",
@@ -293,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,79 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"single_attention_plus_context_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"affinity_matrix_several_representations_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 169500 samples, validate on 18834 samples\n",
-      "Epoch 1/10\n",
-      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f40f50887b8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f40f50887b8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.4235 - accuracy: 0.8204\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.84783, saving model to single_attention_plus_context_model_title_01_0.8478.h5\n",
-      "169500/169500 [==============================] - 52s 307us/sample - loss: 0.4235 - accuracy: 0.8204 - val_loss: 0.3602 - val_accuracy: 0.8478\n",
-      "Epoch 2/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3652 - accuracy: 0.8558\n",
-      "Epoch 00002: val_accuracy improved from 0.84783 to 0.86986, saving model to single_attention_plus_context_model_title_02_0.8699.h5\n",
-      "169500/169500 [==============================] - 50s 292us/sample - loss: 0.3651 - accuracy: 0.8558 - val_loss: 0.3281 - val_accuracy: 0.8699\n",
-      "Epoch 3/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3452 - accuracy: 0.8648\n",
-      "Epoch 00003: val_accuracy improved from 0.86986 to 0.87066, saving model to single_attention_plus_context_model_title_03_0.8707.h5\n",
-      "169500/169500 [==============================] - 50s 293us/sample - loss: 0.3452 - accuracy: 0.8648 - val_loss: 0.3209 - val_accuracy: 0.8707\n",
-      "Epoch 4/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3329 - accuracy: 0.8686\n",
-      "Epoch 00004: val_accuracy improved from 0.87066 to 0.87538, saving model to single_attention_plus_context_model_title_04_0.8754.h5\n",
-      "169500/169500 [==============================] - 49s 292us/sample - loss: 0.3328 - accuracy: 0.8687 - val_loss: 0.3114 - val_accuracy: 0.8754\n",
-      "Epoch 5/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3227 - accuracy: 0.8725\n",
-      "Epoch 00005: val_accuracy improved from 0.87538 to 0.87984, saving model to single_attention_plus_context_model_title_05_0.8798.h5\n",
-      "169500/169500 [==============================] - 49s 291us/sample - loss: 0.3227 - accuracy: 0.8725 - val_loss: 0.3042 - val_accuracy: 0.8798\n",
-      "Epoch 6/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3146 - accuracy: 0.8756\n",
-      "Epoch 00006: val_accuracy did not improve from 0.87984\n",
-      "169500/169500 [==============================] - 49s 291us/sample - loss: 0.3146 - accuracy: 0.8756 - val_loss: 0.3092 - val_accuracy: 0.8780\n",
-      "Epoch 7/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3082 - accuracy: 0.8786\n",
-      "Epoch 00007: val_accuracy improved from 0.87984 to 0.88314, saving model to single_attention_plus_context_model_title_07_0.8831.h5\n",
-      "169500/169500 [==============================] - 49s 291us/sample - loss: 0.3083 - accuracy: 0.8786 - val_loss: 0.3018 - val_accuracy: 0.8831\n",
-      "Epoch 8/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.3024 - accuracy: 0.8804\n",
-      "Epoch 00008: val_accuracy did not improve from 0.88314\n",
-      "169500/169500 [==============================] - 49s 290us/sample - loss: 0.3023 - accuracy: 0.8804 - val_loss: 0.3033 - val_accuracy: 0.8791\n",
-      "Epoch 9/10\n",
-      "169312/169500 [============================>.] - ETA: 0s - loss: 0.2991 - accuracy: 0.8822\n",
-      "Epoch 00009: val_accuracy did not improve from 0.88314\n",
-      "169500/169500 [==============================] - 49s 291us/sample - loss: 0.2991 - accuracy: 0.8822 - val_loss: 0.2976 - val_accuracy: 0.8818\n",
-      "Epoch 10/10\n",
-      "169376/169500 [============================>.] - ETA: 0s - loss: 0.2937 - accuracy: 0.8837\n",
-      "Epoch 00010: val_accuracy did not improve from 0.88314\n",
-      "169500/169500 [==============================] - 49s 290us/sample - loss: 0.2937 - accuracy: 0.8837 - val_loss: 0.2938 - val_accuracy: 0.8831\n"
-     ]
-    }
-   ],
-   "source": [
-    "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=10, \n",
-    "          batch_size=32, \n",
-    "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
-    "          callbacks=callbacks_list)"
    ]
   },
   {
@@ -398,7 +282,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "history = model.fit([train_article_title, train_table_title], train_label, \n",
+    "          epochs=20, \n",
+    "          batch_size=32, \n",
+    "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
+    "          callbacks=callbacks_list)"
+   ]
   },
   {
    "cell_type": "code",
