--- a/model_title/att_01_single_attention_model_title.ipynb
+++ b/model_title/att_01_single_attention_model_title.ipynb
@@ -27,18 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/final_train_dataset', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/final_validation_dataset', delimiter=',')"
    ]
   },
   {
@@ -50,16 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "169500it [00:52, 3228.23it/s]\n"
+      "169500it [01:15, 2241.33it/s]\n"
      ]
     }
    ],
@@ -147,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +148,7 @@
        "(169500, 31, 50)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18834it [00:05, 3232.07it/s]\n"
+      "18834it [00:08, 2275.20it/s]\n"
      ]
     }
    ],
@@ -210,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +211,7 @@
        "(18834, 31, 50)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -335,54 +316,97 @@
      "output_type": "stream",
      "text": [
       "Train on 169500 samples, validate on 18834 samples\n",
-      "Epoch 1/10\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7fc9ab9681e0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7fc9ab9681e0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "168288/169500 [============================>.] - ETA: 0s - loss: 0.4627 - accuracy: 0.7953\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.83286, saving model to single_attention_model_title_01_0.8329.h5\n",
-      "169500/169500 [==============================] - 7s 44us/sample - loss: 0.4624 - accuracy: 0.7955 - val_loss: 0.3874 - val_accuracy: 0.8329\n",
-      "Epoch 2/10\n",
-      "168544/169500 [============================>.] - ETA: 0s - loss: 0.4177 - accuracy: 0.8242\n",
-      "Epoch 00002: val_accuracy improved from 0.83286 to 0.84592, saving model to single_attention_model_title_02_0.8459.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.4176 - accuracy: 0.8242 - val_loss: 0.3659 - val_accuracy: 0.8459\n",
-      "Epoch 3/10\n",
-      "169088/169500 [============================>.] - ETA: 0s - loss: 0.4027 - accuracy: 0.8320\n",
-      "Epoch 00003: val_accuracy improved from 0.84592 to 0.85224, saving model to single_attention_model_title_03_0.8522.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.4027 - accuracy: 0.8321 - val_loss: 0.3558 - val_accuracy: 0.8522\n",
-      "Epoch 4/10\n",
-      "168288/169500 [============================>.] - ETA: 0s - loss: 0.3941 - accuracy: 0.8373\n",
-      "Epoch 00004: val_accuracy improved from 0.85224 to 0.85362, saving model to single_attention_model_title_04_0.8536.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3940 - accuracy: 0.8373 - val_loss: 0.3535 - val_accuracy: 0.8536\n",
-      "Epoch 5/10\n",
-      "168608/169500 [============================>.] - ETA: 0s - loss: 0.3870 - accuracy: 0.8413\n",
-      "Epoch 00005: val_accuracy improved from 0.85362 to 0.85675, saving model to single_attention_model_title_05_0.8567.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3870 - accuracy: 0.8413 - val_loss: 0.3466 - val_accuracy: 0.8567\n",
-      "Epoch 6/10\n",
-      "169248/169500 [============================>.] - ETA: 0s - loss: 0.3817 - accuracy: 0.8431\n",
-      "Epoch 00006: val_accuracy improved from 0.85675 to 0.85786, saving model to single_attention_model_title_06_0.8579.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3817 - accuracy: 0.8431 - val_loss: 0.3422 - val_accuracy: 0.8579\n",
-      "Epoch 7/10\n",
-      "169472/169500 [============================>.] - ETA: 0s - loss: 0.3769 - accuracy: 0.8461\n",
-      "Epoch 00007: val_accuracy improved from 0.85786 to 0.86100, saving model to single_attention_model_title_07_0.8610.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3770 - accuracy: 0.8461 - val_loss: 0.3390 - val_accuracy: 0.8610\n",
-      "Epoch 8/10\n",
-      "168352/169500 [============================>.] - ETA: 0s - loss: 0.3730 - accuracy: 0.8476\n",
-      "Epoch 00008: val_accuracy improved from 0.86100 to 0.86169, saving model to single_attention_model_title_08_0.8617.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3729 - accuracy: 0.8477 - val_loss: 0.3387 - val_accuracy: 0.8617\n",
-      "Epoch 9/10\n",
-      "169248/169500 [============================>.] - ETA: 0s - loss: 0.3718 - accuracy: 0.8492\n",
-      "Epoch 00009: val_accuracy improved from 0.86169 to 0.86381, saving model to single_attention_model_title_09_0.8638.h5\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3717 - accuracy: 0.8493 - val_loss: 0.3343 - val_accuracy: 0.8638\n",
-      "Epoch 10/10\n",
-      "169216/169500 [============================>.] - ETA: 0s - loss: 0.3673 - accuracy: 0.8512\n",
-      "Epoch 00010: val_accuracy did not improve from 0.86381\n",
-      "169500/169500 [==============================] - 7s 41us/sample - loss: 0.3672 - accuracy: 0.8513 - val_loss: 0.3360 - val_accuracy: 0.8626\n"
+      "Epoch 1/20\n",
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f068991ae18> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f068991ae18> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "168928/169500 [============================>.] - ETA: 0s - loss: 0.4684 - accuracy: 0.7918\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.83004, saving model to single_attention_model_title_01_0.8300.h5\n",
+      "169500/169500 [==============================] - 13s 79us/sample - loss: 0.4684 - accuracy: 0.7918 - val_loss: 0.3976 - val_accuracy: 0.8300\n",
+      "Epoch 2/20\n",
+      "169056/169500 [============================>.] - ETA: 0s - loss: 0.4255 - accuracy: 0.8193\n",
+      "Epoch 00002: val_accuracy improved from 0.83004 to 0.84427, saving model to single_attention_model_title_02_0.8443.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.4255 - accuracy: 0.8193 - val_loss: 0.3715 - val_accuracy: 0.8443\n",
+      "Epoch 3/20\n",
+      "169312/169500 [============================>.] - ETA: 0s - loss: 0.4083 - accuracy: 0.8279\n",
+      "Epoch 00003: val_accuracy did not improve from 0.84427\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.4083 - accuracy: 0.8279 - val_loss: 0.3700 - val_accuracy: 0.8424\n",
+      "Epoch 4/20\n",
+      "169184/169500 [============================>.] - ETA: 0s - loss: 0.3992 - accuracy: 0.8350\n",
+      "Epoch 00004: val_accuracy improved from 0.84427 to 0.85436, saving model to single_attention_model_title_04_0.8544.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3993 - accuracy: 0.8351 - val_loss: 0.3566 - val_accuracy: 0.8544\n",
+      "Epoch 5/20\n",
+      "168928/169500 [============================>.] - ETA: 0s - loss: 0.3920 - accuracy: 0.8377\n",
+      "Epoch 00005: val_accuracy improved from 0.85436 to 0.85701, saving model to single_attention_model_title_05_0.8570.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3920 - accuracy: 0.8377 - val_loss: 0.3529 - val_accuracy: 0.8570\n",
+      "Epoch 6/20\n",
+      "168800/169500 [============================>.] - ETA: 0s - loss: 0.3872 - accuracy: 0.8401\n",
+      "Epoch 00006: val_accuracy did not improve from 0.85701\n",
+      "169500/169500 [==============================] - 12s 73us/sample - loss: 0.3874 - accuracy: 0.8400 - val_loss: 0.3473 - val_accuracy: 0.8565\n",
+      "Epoch 7/20\n",
+      "169024/169500 [============================>.] - ETA: 0s - loss: 0.3806 - accuracy: 0.8434\n",
+      "Epoch 00007: val_accuracy improved from 0.85701 to 0.85770, saving model to single_attention_model_title_07_0.8577.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3807 - accuracy: 0.8433 - val_loss: 0.3490 - val_accuracy: 0.8577\n",
+      "Epoch 8/20\n",
+      "169344/169500 [============================>.] - ETA: 0s - loss: 0.3777 - accuracy: 0.8455\n",
+      "Epoch 00008: val_accuracy improved from 0.85770 to 0.85999, saving model to single_attention_model_title_08_0.8600.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3776 - accuracy: 0.8456 - val_loss: 0.3415 - val_accuracy: 0.8600\n",
+      "Epoch 9/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.3759 - accuracy: 0.8466\n",
+      "Epoch 00009: val_accuracy did not improve from 0.85999\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3758 - accuracy: 0.8466 - val_loss: 0.3437 - val_accuracy: 0.8584\n",
+      "Epoch 10/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.3719 - accuracy: 0.8482\n",
+      "Epoch 00010: val_accuracy did not improve from 0.85999\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3719 - accuracy: 0.8481 - val_loss: 0.3409 - val_accuracy: 0.8583\n",
+      "Epoch 11/20\n",
+      "169152/169500 [============================>.] - ETA: 0s - loss: 0.3707 - accuracy: 0.8483\n",
+      "Epoch 00011: val_accuracy improved from 0.85999 to 0.86461, saving model to single_attention_model_title_11_0.8646.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3708 - accuracy: 0.8483 - val_loss: 0.3384 - val_accuracy: 0.8646\n",
+      "Epoch 12/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.3668 - accuracy: 0.8508\n",
+      "Epoch 00012: val_accuracy did not improve from 0.86461\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3668 - accuracy: 0.8508 - val_loss: 0.3389 - val_accuracy: 0.8631\n",
+      "Epoch 13/20\n",
+      "168736/169500 [============================>.] - ETA: 0s - loss: 0.3653 - accuracy: 0.8513\n",
+      "Epoch 00013: val_accuracy did not improve from 0.86461\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3654 - accuracy: 0.8513 - val_loss: 0.3365 - val_accuracy: 0.8625\n",
+      "Epoch 14/20\n",
+      "168768/169500 [============================>.] - ETA: 0s - loss: 0.3616 - accuracy: 0.8527\n",
+      "Epoch 00014: val_accuracy did not improve from 0.86461\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3616 - accuracy: 0.8527 - val_loss: 0.3342 - val_accuracy: 0.8642\n",
+      "Epoch 15/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.3612 - accuracy: 0.8542\n",
+      "Epoch 00015: val_accuracy did not improve from 0.86461\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3611 - accuracy: 0.8542 - val_loss: 0.3350 - val_accuracy: 0.8611\n",
+      "Epoch 16/20\n",
+      "168800/169500 [============================>.] - ETA: 0s - loss: 0.3584 - accuracy: 0.8544\n",
+      "Epoch 00016: val_accuracy improved from 0.86461 to 0.86477, saving model to single_attention_model_title_16_0.8648.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3586 - accuracy: 0.8543 - val_loss: 0.3343 - val_accuracy: 0.8648\n",
+      "Epoch 17/20\n",
+      "169088/169500 [============================>.] - ETA: 0s - loss: 0.3553 - accuracy: 0.8560\n",
+      "Epoch 00017: val_accuracy did not improve from 0.86477\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3552 - accuracy: 0.8560 - val_loss: 0.3330 - val_accuracy: 0.8645\n",
+      "Epoch 18/20\n",
+      "168800/169500 [============================>.] - ETA: 0s - loss: 0.3544 - accuracy: 0.8563\n",
+      "Epoch 00018: val_accuracy improved from 0.86477 to 0.86493, saving model to single_attention_model_title_18_0.8649.h5\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3543 - accuracy: 0.8564 - val_loss: 0.3309 - val_accuracy: 0.8649\n",
+      "Epoch 19/20\n",
+      "169152/169500 [============================>.] - ETA: 0s - loss: 0.3527 - accuracy: 0.8572\n",
+      "Epoch 00019: val_accuracy improved from 0.86493 to 0.86790, saving model to single_attention_model_title_19_0.8679.h5\n",
+      "169500/169500 [==============================] - 12s 73us/sample - loss: 0.3527 - accuracy: 0.8572 - val_loss: 0.3282 - val_accuracy: 0.8679\n",
+      "Epoch 20/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.3510 - accuracy: 0.8588\n",
+      "Epoch 00020: val_accuracy did not improve from 0.86790\n",
+      "169500/169500 [==============================] - 13s 75us/sample - loss: 0.3510 - accuracy: 0.8587 - val_loss: 0.3305 - val_accuracy: 0.8666\n"
      ]
     }
    ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=10, \n",
+    "          epochs=20, \n",
     "          batch_size=32, \n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
