--- a/model_title/coatt_05_coattention_several_spaces_model_title.ipynb
+++ b/model_title/coatt_05_coattention_several_spaces_model_title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('../train_data/true_pairs_by_cosine_070_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('../train_data/false_pairs_by_pands_title_main_passage_keywords.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/final_train_dataset', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/final_validation_dataset', delimiter=',')"
    ]
   },
   {
@@ -50,16 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "169500it [01:01, 2735.72it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "train_article_title = []\n",
     "train_table_title = []\n",
@@ -139,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(169500, 31, 50)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_article_title.shape"
    ]
@@ -166,9 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "18834it [00:06, 2733.05it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "validation_article_title = []\n",
     "validation_table_title = []\n",
@@ -183,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,28 +202,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18834, 31, 50)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "validation_article_title.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def affinity_method(query, document):\n",
+    "def coattention_method(query, key, value):\n",
     "    \n",
-    "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
+    "    scores = tf.matmul(query, key, transpose_b=True)\n",
     "    \n",
-    "    affinity = tf.matmul(query,transpose_document)\n",
+    "    distribution = tf.nn.softmax(scores)\n",
     "    \n",
-    "    normalize_affinity = tf.nn.softmax(affinity)\n",
+    "    attention_matrix = tf.matmul(distribution, value)\n",
     "    \n",
-    "    return normalize_affinity"
+    "    return attention_matrix"
    ]
   },
   {
@@ -227,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,11 +255,32 @@
     "    article_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    table_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
     "    \n",
-    "    affinity_titleA_titleB = affinity_method(article_title,table_title)\n",
     "    \n",
-    "    learned_vector = tf.keras.layers.Flatten()(affinity_titleA_titleB)\n",
-    "   \n",
-    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(learned_vector)\n",
+    "    affinity_titleA_titleB = coattention_method(article_title,table_title,article_title)\n",
+    "    affinity_titleB_titleA = coattention_method(table_title,article_title,table_title)\n",
+    "    \n",
+    "    context_coattentionA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleA_titleB)\n",
+    "    context_coattentionB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleB_titleA)\n",
+    "    \n",
+    "    learned_vector1 = tf.keras.layers.Flatten()(context_coattentionA)\n",
+    "    learned_vector2 = tf.keras.layers.Flatten()(context_coattentionB)\n",
+    "    \n",
+    "    \n",
+    "    context_titleA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
+    "    context_titleB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
+    "    \n",
+    "    affinity1_titleA_titleB = coattention_method(context_titleA,context_titleB,context_titleA)\n",
+    "    affinity1_titleB_titleA = coattention_method(context_titleB,context_titleA,context_titleB)\n",
+    "    \n",
+    "    context2_coattentionA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity1_titleA_titleB)\n",
+    "    context2_coattentionB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity1_titleB_titleA)\n",
+    "    \n",
+    "    learned_vector3 = tf.keras.layers.Flatten()(context2_coattentionA)\n",
+    "    learned_vector4 = tf.keras.layers.Flatten()(context2_coattentionB)\n",
+    "    \n",
+    "    final_vector = tf.keras.layers.Concatenate()([learned_vector1,learned_vector2,learned_vector3,learned_vector4])\n",
+    "    \n",
+    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(final_vector)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
     "    MLP_hidden = tf.keras.layers.Dense(32, activation='relu')(dropout1)\n",
     "    dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(MLP_hidden)\n",
@@ -253,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,20 +318,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"single_affinity_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"coattention_several_spaces_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 169500 samples, validate on 18834 samples\n",
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f949c097ea0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f949c097ea0> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.3210 - accuracy: 0.8719\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.91866, saving model to coattention_several_spaces_model_title_01_0.9187.h5\n",
+      "169500/169500 [==============================] - 184s 1ms/sample - loss: 0.3210 - accuracy: 0.8719 - val_loss: 0.2064 - val_accuracy: 0.9187\n",
+      "Epoch 2/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2079 - accuracy: 0.9228\n",
+      "Epoch 00002: val_accuracy improved from 0.91866 to 0.93358, saving model to coattention_several_spaces_model_title_02_0.9336.h5\n",
+      "169500/169500 [==============================] - 183s 1ms/sample - loss: 0.2079 - accuracy: 0.9228 - val_loss: 0.1684 - val_accuracy: 0.9336\n",
+      "Epoch 3/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1790 - accuracy: 0.9337\n",
+      "Epoch 00003: val_accuracy improved from 0.93358 to 0.93565, saving model to coattention_several_spaces_model_title_03_0.9356.h5\n",
+      "169500/169500 [==============================] - 240s 1ms/sample - loss: 0.1790 - accuracy: 0.9338 - val_loss: 0.1640 - val_accuracy: 0.9356\n",
+      "Epoch 4/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1619 - accuracy: 0.9390\n",
+      "Epoch 00004: val_accuracy did not improve from 0.93565\n",
+      "169500/169500 [==============================] - 282s 2ms/sample - loss: 0.1619 - accuracy: 0.9390 - val_loss: 0.1662 - val_accuracy: 0.9335\n",
+      "Epoch 5/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1491 - accuracy: 0.9429\n",
+      "Epoch 00005: val_accuracy improved from 0.93565 to 0.93836, saving model to coattention_several_spaces_model_title_05_0.9384.h5\n",
+      "169500/169500 [==============================] - 282s 2ms/sample - loss: 0.1491 - accuracy: 0.9429 - val_loss: 0.1572 - val_accuracy: 0.9384\n",
+      "Epoch 6/10\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1389 - accuracy: 0.9463\n",
+      "Epoch 00006: val_accuracy improved from 0.93836 to 0.93910, saving model to coattention_several_spaces_model_title_06_0.9391.h5\n",
+      "169500/169500 [==============================] - 282s 2ms/sample - loss: 0.1389 - accuracy: 0.9463 - val_loss: 0.1586 - val_accuracy: 0.9391\n",
+      "Epoch 7/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1307 - accuracy: 0.9489\n",
+      "Epoch 00007: val_accuracy did not improve from 0.93910\n",
+      "169500/169500 [==============================] - 281s 2ms/sample - loss: 0.1307 - accuracy: 0.9489 - val_loss: 0.1611 - val_accuracy: 0.9359\n",
+      "Epoch 8/10\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1235 - accuracy: 0.9516\n",
+      "Epoch 00008: val_accuracy improved from 0.93910 to 0.93921, saving model to coattention_several_spaces_model_title_08_0.9392.h5\n",
+      "169500/169500 [==============================] - 194s 1ms/sample - loss: 0.1235 - accuracy: 0.9516 - val_loss: 0.1670 - val_accuracy: 0.9392\n",
+      "Epoch 9/10\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1156 - accuracy: 0.9538\n",
+      "Epoch 00009: val_accuracy did not improve from 0.93921\n",
+      "169500/169500 [==============================] - 227s 1ms/sample - loss: 0.1156 - accuracy: 0.9538 - val_loss: 0.1724 - val_accuracy: 0.9363\n",
+      "Epoch 10/10\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1101 - accuracy: 0.9561\n",
+      "Epoch 00010: val_accuracy improved from 0.93921 to 0.94032, saving model to coattention_several_spaces_model_title_10_0.9403.h5\n",
+      "169500/169500 [==============================] - 241s 1ms/sample - loss: 0.1101 - accuracy: 0.9561 - val_loss: 0.1910 - val_accuracy: 0.9403\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
     "          epochs=10, \n",
